# algosystem

./: .gitignore  README.md  __init__.py  backtest_charts.pptx  backtest_presentation.pptx  benchmark.csv  debug_config.json  main.py  pyproject.toml  pytest.ini  setup.py  strategy.csv  test.py  troubleshoot.py
.github/workflows/: test.yml
algosystem/: api.py
algosystem/analysis/: performance.py  portfolio.py  risk.py
algosystem/backtesting/: engine.py  metrics.py
algosystem/backtesting/dashboard/: dashboard_generator.py
algosystem/cli/: commands.py
algosystem/data/: benchmark.py
algosystem/data/benchmark/: 10y_treasury.parquet  13w_treasury.parquet  30y_treasury.parquet  5y_treasury.parquet  china.parquet  commodities.parquet  corporate_bonds.parquet  djia.parquet  emerging_markets.parquet  energy.parquet  europe.parquet  gold.parquet  (+18 more)
algosystem/reporting/: export.py
algosystem/utils/: __init__.py  _logging.py  config.py  graph_config.json
backtesting/: engine.py  metrics.py  visualization.py
cli/: commands.py
dashboard/: dashboard.html  dashboard_data.json
docs/: API_GUIDE.md  CLI_GUIDE.md  DASHBOARD_GUIDE.md  api.md  benchmark.md  cli.md  dashboard.md  database_integration.md  eg_api.py  installation.md
examples/: eg_api.py
tests/: __init__.py  conftest.py  test_analysis.py  test_api_complete.py  test_cli.py  test_cli_integration.py  test_dashboard_generation.py  test_database_mock.py  test_engine.py  test_engine_db_export.py  test_metrics.py  test_runner.py  test_web_app.py  test_web_app_components.py
utils/: decorators.py  logging.py
(+21 files in other folders)
