[tool.poetry]
name = "algosystem"
version = "0.1.0"
description = "A batteries-included pythonic library for AlgoGators members"
authors = ["AlgoGators Team <team@algogators.org>"]
homepage = "https://github.com/algogators/algosystem"
readme = "README.md"
# Optional classifiers (will be included in the built package)
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

# (Optional) Explicitly include your package if needed.
packages = [
    { include = "algosystem" }
]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.3.0"
numpy = ">=1.20.0"
matplotlib = ">=3.4.0"
seaborn = ">=0.11.0"
sqlalchemy = ">=1.4.0"
click = ">=8.0.0"
scipy = ">=1.7.0"
pytz = ">=2021.1"
requests = ">=2.25.0"
pyyaml = ">=5.4.0"
weasyprint = ">=53.0"
markdown = ">=3.3.4"

[tool.poetry.scripts]
algosystem = "algosystem.cli.commands:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
